Bug 375506 - Fix for bug 372629 breaks Mingw - build error in gfxWindowsFonts.cpp, r=roc